[package]
name = "sheetleague"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.7.0", package = "libadwaita", features = ["gtk_v4_6", "v1_5"] }
async-channel = "2.3.1"
gtk = { version = "0.9.2", package = "gtk4", features = ["v4_14"] }
umya-spreadsheet = { version = "2.1.1", default-features = false }
